--- a/style-phone.css
+++ b/style-phone.css
@@ -32,8 +32,87 @@ h2 {
     background-color: transparent;
 }
 
+.menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 200px;
+    height: 120vw;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #4dc1b8;
+    box-shadow: -40px -25px 15px 30px rgba(0,0,0,0.54);
+}
+
+.menu__close-btn {
+    align-self: flex-end;;
+    height: 30px;
+    width: 30px;
+    border: 1px solid black;
+    border-radius: 40px;
+    background-color: transparent;
+
+}
+
+.menu__nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.menu__nav__link {
+    color: black;
+    text-decoration: none;
+    margin: 5px 0;
+}
+
+.menu__nav__link:last-child {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    border: 2px solid #000000;
+    border-radius: 5px;
+}
+
+.menu__nav__icon {
+    margin-left: 10px;
+}
+
+.menu__nav__link:focus {
+    color: white;
+    text-decoration: underline;
+}
+
 .header-right {
     display: none;
+}
+
+.header-right__retailers {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    width: 80px;
+}
+
+.header-right__retailers__text {
+    text-align: center;
+}
+
+.retailers-number {
+    display: flex;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+    width: 80px;
+    height: 24px;
+    margin-top: 10px;
+    background-color: #000000;
+    font-size: 18px;
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
+    color: #ffffff;
 }
 
 .fa-bars:before {
